--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     line-height: 1.5;
     background:var(--secondary-color);
     bottom:0;
+    border-radius:10px;
     padding:1.5rem;
     transition: all .5s ease-in-out;
 }
@@ -89,4 +90,28 @@ body{
     right:-15px;
     border-width:8px 0px 8px 16px;
     border-color:transparent var(--secondary-color);
+}
+/* Meadia queries */
+@media (max-width:900px){
+    #timeline ul li div{
+        width:250px;
+        left:-284px;
+    }
+}
+@media (max-width:600px){
+    #timeline ul li{
+        margin-left:20px;
+    }
+    #timeline ul li:nth-child(even) div{
+        left:40px;
+    }
+    #timeline ul li:nth-child(even) div:before{
+        left:-15px;
+        border-width:8px 16px 8px 0px;
+        border-color:transparent var(--secondary-color);
+    }
+    #timeline ul li div {
+        width:calc(100vw - 100px);
+        
+    }
 }
