--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --primary-color:#425b84;
-    --secondary-color:#5b7bb4;
+    --primary-color:#fca001;
+    --secondary-color:#d87f2c;
     --max-width:1100px;
 }
 *{
