--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --primary-color:#fca001;
-    --secondary-color:#d87f2c;
+    --primary-color:#1effec;
+    --secondary-color:rgb(27, 191, 197);
     --max-width:1100px;
 }
 *{
@@ -43,7 +43,7 @@ body{
 #timeline ul li div{
     position:relative;
     width:400px;
-    line-height: 1.5;
+    line-height: 2;
     background:var(--secondary-color);
     bottom:0;
     border-radius:10px;
